[gd_scene load_steps=7 format=3]

# External resources referenced by this scene
[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://sprites/castle.png" type="Texture2D" id=2]

# Root node of the scene
[node name="Main" type="Node2D"]
script = ExtResource(1)

# Background sprite to render different environments. The texture will be
# assigned dynamically in the script based on the current wave.
[node name="Background" type="Sprite2D" parent="."]
position = Vector2(240, 270)

# Castle sprite on the left side of the battlefield
[node name="Castle" type="Sprite2D" parent="."]
texture = ExtResource(2)
position = Vector2(60, 400)

# Container for player-controlled units
[node name="Units" type="Node2D" parent="."]

# Container for enemy units
[node name="Enemies" type="Node2D" parent="."]

# Heads-up display layer to draw UI elements
[node name="HUD" type="CanvasLayer" parent="."]

# Coin counter label
[node name="CoinsLabel" type="Label" parent="HUD"]
position = Vector2(10, 10)
text = "Coins: 0"

# Castle health label
[node name="CastleHealthLabel" type="Label" parent="HUD"]
position = Vector2(10, 30)
text = "Castle HP: 100"

# Temporary message display (e.g. wave notifications)
[node name="MessageLabel" type="Label" parent="HUD"]
position = Vector2(10, 50)
text = ""

# Horizontal container to hold spawn buttons
[node name="Buttons" type="HBoxContainer" parent="HUD"]
position = Vector2(10, 80)

[node name="SwordButton" type="Button" parent="Buttons"]
text = "Sword (10)"

[node name="ArcherButton" type="Button" parent="Buttons"]
text = "Archer (15)"

[node name="MageButton" type="Button" parent="Buttons"]
text = "Mage (20)"

# Horizontal container for upgrade buttons
[node name="UpgradeButtons" type="HBoxContainer" parent="HUD"]
position = Vector2(10, 120)

[node name="UpgradeSwordButton" type="Button" parent="UpgradeButtons"]
text = "Upgrade Sword"

[node name="UpgradeArcherButton" type="Button" parent="UpgradeButtons"]
text = "Upgrade Archer"

[node name="UpgradeMageButton" type="Button" parent="UpgradeButtons"]
text = "Upgrade Mage"

# Horizontal container for spell buttons (player-cast spells)
[node name="SpellButtons" type="HBoxContainer" parent="HUD"]
position = Vector2(10, 160)

[node name="FireballButton" type="Button" parent="SpellButtons"]
text = "Fireball"

[node name="IceButton" type="Button" parent="SpellButtons"]
text = "Ice"

[node name="PoisonButton" type="Button" parent="SpellButtons"]
text = "Poison"